--- a/package.json
+++ b/package.json
@@ -12,37 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "4.1.1",
-    "@angular/compiler": "4.1.1",
-    "@angular/core": "4.1.1",
-    "@angular/forms": "4.1.1",
-    "@angular/http": "4.1.1",
-    "@angular/material": "^2.0.0-beta.2",
-    "@angular/platform-browser": "4.1.1",
-    "@angular/platform-browser-dynamic": "4.1.1",
-    "@angular/router": "^4.0.1",
-    "core-js": "^2.4.1",
-    "rxjs": "5.3.1",
+    "@angular/animations": "5.2.0",
+    "@angular/cdk": "^5.0.4",
+    "@angular/common": "5.2.0",
+    "@angular/compiler": "5.2.0",
+    "@angular/core": "5.2.0",
+    "@angular/forms": "5.2.0",
+    "@angular/http": "5.2.0",
+    "@angular/material": "5.0.4",
+    "@angular/platform-browser": "5.2.0",
+    "@angular/platform-browser-dynamic": "5.2.0",
+    "@angular/router": "5.2.0",
+    "core-js": "2.5.3",
+    "rxjs": "5.5.6",
     "ts-helpers": "^1.1.1",
-    "zone.js": "0.8.10"
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.2",
-    "@angular/compiler-cli": "4.1.1",
-    "@types/jasmine": "2.5.47",
-    "@types/node": "7.0.18",
-    "codelyzer": "3.0.1",
-    "jasmine-core": "2.6.1",
-    "jasmine-spec-reporter": "4.1.0",
-    "karma": "1.7.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "@angular/cli": "1.6.4",
+    "@angular/compiler-cli": "5.2.0",
+    "@types/jasmine": "2.8.4",
+    "@types/node": "9.3.0",
+    "codelyzer": "4.0.2",
+    "jasmine-core": "2.8.0",
+    "jasmine-spec-reporter": "4.2.1",
+    "karma": "2.0.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "1.0.1",
+    "karma-jasmine": "1.1.1",
     "karma-remap-istanbul": "0.6.0",
-    "protractor": "5.1.1",
-    "ts-node": "3.0.4",
-    "tslint": "5.2.0",
-    "typescript": "2.3.2"
+    "protractor": "5.2.2",
+    "ts-node": "4.1.0",
+    "tslint": "5.9.1",
+    "typescript": "2.6.2"
   }
 }
